[package]
name = "abc043"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc043-a",problem = {platform = "atcoder",contest = "abc043",index = "A"}}
b = {name = "abc043-b",problem = {platform = "atcoder",contest = "abc043",index = "B"}}
c = {name = "abc043-c",problem = {platform = "atcoder",contest = "abc043",index = "C"}}
d = {name = "abc043-d",problem = {platform = "atcoder",contest = "abc043",index = "D"}}

# dependencies added to new project
[dependencies]
itertools = "*"
num = "*"
permutohedron = "*"
proconio = "*"
superslice = "*"
union-find = "*"

[[bin]]
name = "abc043-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc043-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc043-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc043-d"
path = "./src/bin/d.rs"
