[package]
name = "abc046"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc046-a",problem = {platform = "atcoder",contest = "abc046",index = "A"}}
b = {name = "abc046-b",problem = {platform = "atcoder",contest = "abc046",index = "B"}}
c = {name = "abc046-c",problem = {platform = "atcoder",contest = "abc046",index = "C"}}
d = {name = "abc046-d",problem = {platform = "atcoder",contest = "abc046",index = "D"}}

# dependencies added to new project
[dependencies]
num = '*'
permutohedron = "*"
proconio = "*"
superslice = "*"
union-find = "*"

[[bin]]
name = "abc046-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc046-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc046-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc046-d"
path = "./src/bin/d.rs"
