[package]
name = "abc049"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc049-a",problem = {platform = "atcoder",contest = "abc049",index = "A"}}
b = {name = "abc049-b",problem = {platform = "atcoder",contest = "abc049",index = "B"}}
c = {name = "abc049-c",problem = {platform = "atcoder",contest = "abc049",index = "C"}}
d = {name = "abc049-d",problem = {platform = "atcoder",contest = "abc049",index = "D"}}

# dependencies added to new project
[dependencies]
itertools = "*"
num = "*"
permutohedron = "*"
proconio = "*"
superslice = "*"
union-find = "*"

[[bin]]
name = "abc049-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc049-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc049-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc049-d"
path = "./src/bin/d.rs"
