[package]
name = "abc050"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc050-a",problem = {platform = "atcoder",contest = "abc050",index = "A"}}
b = {name = "abc050-b",problem = {platform = "atcoder",contest = "abc050",index = "B"}}
c = {name = "abc050-c",problem = {platform = "atcoder",contest = "abc050",index = "C"}}
d = {name = "abc050-d",problem = {platform = "atcoder",contest = "abc050",index = "D"}}

# dependencies added to new project
[dependencies]
itertools = "*"
num = "*"
permutohedron = "*"
proconio = "*"
superslice = "*"
union-find = "*"

[[bin]]
name = "abc050-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc050-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc050-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc050-d"
path = "./src/bin/d.rs"
