[package]
name = "abc052"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc052-a",problem = {platform = "atcoder",contest = "abc052",index = "A"}}
b = {name = "abc052-b",problem = {platform = "atcoder",contest = "abc052",index = "B"}}
c = {name = "abc052-c",problem = {platform = "atcoder",contest = "abc052",index = "C"}}
d = {name = "abc052-d",problem = {platform = "atcoder",contest = "abc052",index = "D"}}

# dependencies added to new project
[dependencies]
itertools = "*"
num = "*"
permutohedron = "*"
proconio = "*"
superslice = "*"
union-find = "*"

[[bin]]
name = "abc052-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc052-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc052-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc052-d"
path = "./src/bin/d.rs"
