[package]
name = "abc053"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc053-a",problem = {platform = "atcoder",contest = "abc053",index = "A"}}
b = {name = "abc053-b",problem = {platform = "atcoder",contest = "abc053",index = "B"}}
c = {name = "abc053-c",problem = {platform = "atcoder",contest = "abc053",index = "C"}}
d = {name = "abc053-d",problem = {platform = "atcoder",contest = "abc053",index = "D"}}

# dependencies added to new project
[dependencies]
itertools = "*"
num = "*"
permutohedron = "*"
proconio = "*"
superslice = "*"
union-find = "*"

[[bin]]
name = "abc053-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc053-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc053-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc053-d"
path = "./src/bin/d.rs"
