[package]
name = "abc054"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc054-a",problem = {platform = "atcoder",contest = "abc054",index = "A"}}
b = {name = "abc054-b",problem = {platform = "atcoder",contest = "abc054",index = "B"}}
c = {name = "abc054-c",problem = {platform = "atcoder",contest = "abc054",index = "C"}}
d = {name = "abc054-d",problem = {platform = "atcoder",contest = "abc054",index = "D"}}

# dependencies added to new project
[dependencies]
itertools = "*"
num = "*"
permutohedron = "*"
proconio = "*"
superslice = "*"
union-find = "*"

[[bin]]
name = "abc054-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc054-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc054-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc054-d"
path = "./src/bin/d.rs"
