[package]
name = "abc057"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc057-a",problem = {platform = "atcoder",contest = "abc057",index = "A"}}
b = {name = "abc057-b",problem = {platform = "atcoder",contest = "abc057",index = "B"}}
c = {name = "abc057-c",problem = {platform = "atcoder",contest = "abc057",index = "C"}}
d = {name = "abc057-d",problem = {platform = "atcoder",contest = "abc057",index = "D"}}

# dependencies added to new project
[dependencies]
itertools = "*"
num = "*"
permutohedron = "*"
proconio = "*"
superslice = "*"
union-find = "*"

[[bin]]
name = "abc057-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc057-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc057-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc057-d"
path = "./src/bin/d.rs"
