[package]
name = "abc060"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc060-a",problem = {platform = "atcoder",contest = "abc060",index = "A"}}
b = {name = "abc060-b",problem = {platform = "atcoder",contest = "abc060",index = "B"}}
c = {name = "abc060-c",problem = {platform = "atcoder",contest = "abc060",index = "C"}}
d = {name = "abc060-d",problem = {platform = "atcoder",contest = "abc060",index = "D"}}

# dependencies added to new project
[dependencies]
itertools = "*"
num = "*"
permutohedron = "*"
proconio = "*"
superslice = "*"
union-find = "*"

[[bin]]
name = "abc060-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc060-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc060-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc060-d"
path = "./src/bin/d.rs"
