[package]
name = "abc062"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc062-a",problem = {platform = "atcoder",contest = "abc062",index = "A"}}
b = {name = "abc062-b",problem = {platform = "atcoder",contest = "abc062",index = "B"}}
c = {name = "abc062-c",problem = {platform = "atcoder",contest = "abc062",index = "C"}}
d = {name = "abc062-d",problem = {platform = "atcoder",contest = "abc062",index = "D"}}

# dependencies added to new project
[dependencies]
itertools = "*"
num = "*"
permutohedron = "*"
proconio = "*"
superslice = "*"
union-find = "*"

[[bin]]
name = "abc062-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc062-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc062-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc062-d"
path = "./src/bin/d.rs"
